Updates as far as possible for tonight, was unable to fix the portfolio images to align proper

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,57 +1,185 @@
-h1 {
-font-size: 50px;
-background-color: #4aaaa5;
-
-
-}
-
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../images/circle-blues.png")
-
+  background-image: url("../images/circle-blues.png");
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
   background-color: #ffffff;
-  height: 100px;
-  padding: 10px;
-  border: 1px solid;
-  border-color: purple;
+  height: 80px;
+  width: 100%;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  
+  position: relative;
+  margin-bottom: 35px;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: grey;
+  margin-left: 20px;
+  font-size: 15px;
+}
+
+h2 {
+  color: #4aaaa5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 25px;
+  margin-top: 35px;
+}
+
+#namebox, #emailbox {
+  width: 96%;
+  border: 1px solid #aaaaaa;
+  border-radius: 1px;
+  margin: 8px 0;
+  margin-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#messagebox {
+  width: 96%;
+  border: 1px solid #aaaaaa;
+  border-radius: 1px;
+  margin-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+}
+
+#submitbox {
+  padding: 12px 35px;
+  background-color: #4aaaa5;
+  color: white;
+  border: none;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: 20px;
+  margin-bottom: 25px;
+}
+
+.headercontainer {
+  background-color: white;
+  width: 960px;
+  height: 80px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.hr {
+  color: grey;
+}
+
+.name {
+  background-color: #4aaaa5;
+  width: 300px;
+  height: 80px;
+  text-align: center;
+  font-size: 30px;
+  line-height: 80px;
+  color: white;
+}
+
+.link {
+  background-color: white;
+  width: 300px;
+  height: 80px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .about-img {
-  height: 250px;
-  width: 300px;
+  height: 200px;
+  width: 250px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#sidepicture {
+  float: left;
+}
+
+#port {
+  float: right;
+}
+
+.greybar {
+  background-color: grey;
+  opacity: .4;
+  height: 3px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .classItem {
-background-color:#ffffff;
-border-color:#dddddd;
-border:1px solid;
-
+  width: 960px;
+  background-color: #ffffff;
+  border-color: #dddddd;
+  border: 1px solid;
+  margin: 0 auto;
+  position: relative;
 }
 
-p { 
-  background-color: #666666;
+p {
   font-family: Arial, Helvetica, sans-serif;
-
-
+  color: grey;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .wrapper {
-min-height: 100%;
-margin-bottom: -50px;
-
+  min-height: 100%;
+  margin-bottom: -50px;
 }
 
+.cpr {
+  margin-top: 18px;
+}
+
+.work {
+  position: relative;
+  width: 200px;
+  margin: 20px 0;
+  overflow: auto;
+}
+
+.work img {
+  width: 200px;
+  height: 200px;
+}
+
+.work h3 {
+  background-color: #4aaaa5;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  padding: 8px 0;
+  margin-bottom: 0;
+  text-align: center;
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+}
 
 footer {
-  background-color: #666666;
-  padding: 30px;
-  border-color: black;
+  height: 40px;
+  background-color: grey;
+  margin-top: auto;
   width: 100%;
-  height: 30px;
-
+  border: 6px solid #4aaaa5;
+  border-style: solid none none none;
+  text-align: center;
+  color: white;
+  font-size: 11px;
 }
